--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(styles/header.css);
 
 :root{
-    --cor-de-fundo:   #808080;
+    --cor-de-fundo:   #2e39cf;
     --cor-cabecalho:   #C0C0C0;
 }
 
